--- a/index.html
+++ b/index.html
@@ -81,32 +81,32 @@
                     <div class="clients">
                         <div class='large-4 medium-4 small-4 columns'>
                             <div class="client client-bg">
-                                <img alt="" src="images/%40stock/value.jpg" />
+                                <img alt="" src="images/%40stock/value.png" />
                             </div>
                         </div>
                         <div class='large-4 medium-4 small-4 columns'>
                             <div class="client">
-                                <img alt="" src="images/%40stock/global.jpg" />
+                                <img alt="" src="images/%40stock/global.png" />
                             </div>
                         </div>
                         <div class='large-4 medium-4 small-4 columns'>
                             <div class="client">
-                                <img alt="" src="images/%40stock/post.jpg" />
+                                <img alt="" src="images/%40stock/post.png" />
                             </div>
                         </div>
                         <div class='large-4 medium-3 small-4 columns'>
                             <div class="client">
-                                <img alt="" src="images/%40stock/research.jpg" />
+                                <img alt="" src="images/%40stock/research.png" />
                             </div>
                         </div>
                         <div class='large-4 medium-3 small-4 columns'>
                             <div class="client">
-                                <img alt="" src="images/%40stock/customised.jpg" />
+                                <img alt="" src="images/%40stock/customised.png" />
                             </div>
                         </div>
                         <div class='large-4 medium-3 small-4 columns'>
                             <div class="client">
-                                <img alt="" src="images/%40stock/integrated.jpg" />
+                                <img alt="" src="images/%40stock/integrated.png" />
                             </div>
                         </div>
                     </div>
@@ -346,271 +346,81 @@
             <div class="header-title invisible">
                 <div class="row">
                     <div class="large-8 columns">
-                        <h2>Works</h2>
+                        <h2>How</h2>
                         <p>We build brands people trust. Our values and ideas bring people and brands together.</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="content invisible">
-            <div class="works">
-                <div class="large-3 medium-6 columns">
-                    <div class="item">
-                        <a href="case-study.html">
-                            <div class="circle-wrap">
-                                <div class="media work-1"></div>
-                            </div>
-                            <div class="client-name">
-                                <h2>Client</h2>
-                                <h3>Twitter</h3>
-                            </div>
-                            <div class="project">
-                                <h2>Project</h2>
-                                <h3>New season background</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="large-3 medium-6 columns">
-                    <div class="item">
-                        <a href="case-study-2.html">
-                            <div class="circle-wrap">
-                                <div class="media work-2"></div>
-                            </div>
-                            <div class="client-name">
-                                <h2>Client</h2>
-                                <h3>Twitter</h3>
-                            </div>
-                            <div class="project">
-                                <h2>Project</h2>
-                                <h3>New season</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="large-3 medium-6 columns">
-                    <div class="item">
-                        <a href="case-study.html">
-                            <div class="circle-wrap">
-                                <div class="media work-3"></div>
-                            </div>
-                            <div class="client-name">
-                                <h2>Client</h2>
-                                <h3>Twitter</h3>
-                            </div>
-                            <div class="project">
-                                <h2>Project</h2>
-                                <h3>New season</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="large-3 medium-6 columns">
-                    <div class="item">
-                        <a href="case-study-2.html">
-                            <div class="circle-wrap">
-                                <div class="media work-4"></div>
-                            </div>
-                            <div class="client-name">
-                                <h2>Client</h2>
-                                <h3>Twitter</h3>
-                            </div>
-                            <div class="project">
-                                <h2>Project</h2>
-                                <h3>New season</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="large-3 medium-6 columns">
-                    <div class="item">
-                        <a href="case-study.html">
-                            <div class="circle-wrap">
-                                <div class="media work-5"></div>
-                            </div>
-                            <div class="client-name">
-                                <h2>Client</h2>
-                                <h3>Twitter</h3>
-                            </div>
-                            <div class="project">
-                                <h2>Project</h2>
-                                <h3>New season</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="large-3 medium-6 columns">
-                    <div class="item">
-                        <a href="case-study-2.html">
-                            <div class="circle-wrap">
-                                <div class="media work-6"></div>
-                            </div>
-                            <div class="client-name">
-                                <h2>Client</h2>
-                                <h3>Twitter</h3>
-                            </div>
-                            <div class="project">
-                                <h2>Project</h2>
-                                <h3>New season</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="large-3 medium-6 columns">
-                    <div class="item">
-                        <a href="case-study.html">
-                            <div class="circle-wrap">
-                                <div class="media work-7"></div>
-                            </div>
-                            <div class="client-name">
-                                <h2>Client</h2>
-                                <h3>Twitter</h3>
-                            </div>
-                            <div class="project">
-                                <h2>Project</h2>
-                                <h3>New season</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="large-3 medium-6 columns">
-                    <div class="item">
-                        <a href="case-study-2.html">
-                            <div class="circle-wrap">
-                                <img src="images/%40stock/work-8.jpg" alt="">
-                            </div>
-                            <div class="client-name">
-                                <h2>Client</h2>
-                                <h3>Twitter</h3>
-                            </div>
-                            <div class="project">
-                                <h2>Project</h2>
-                                <h3>New season</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="large-3 medium-6 columns">
-                    <div class="item">
-                        <a href="case-study.html">
-                            <div class="circle-wrap">
-                                <div class="media work-9"></div>
-                            </div>
-                            <div class="client-name">
-                                <h2>Client</h2>
-                                <h3>Twitter</h3>
-                            </div>
-                            <div class="project">
-                                <h2>Project</h2>
-                                <h3>New season</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="large-3 medium-6 columns">
-                    <div class="item">
-                        <a href="case-study-2.html">
-                            <div class="circle-wrap">
-                                <div class="media work-10"></div>
-                            </div>
-                            <div class="client-name">
-                                <h2>Client</h2>
-                                <h3>Twitter</h3>
-                            </div>
-                            <div class="project">
-                                <h2>Project</h2>
-                                <h3>New season</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="large-3 medium-6 columns">
-                    <div class="item">
-                        <a href="case-study.html">
-                            <div class="circle-wrap">
-                                <div class="media work-11"></div>
-                            </div>
-                            <div class="client-name">
-                                <h2>Client</h2>
-                                <h3>Twitter</h3>
-                            </div>
-                            <div class="project">
-                                <h2>Project</h2>
-                                <h3>New season</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="large-3 medium-6 columns">
-                    <div class="item">
-                        <a href="case-study.html">
-                            <div class="circle-wrap">
-                                <div class="media work-12"></div>
-                            </div>
-                            <div class="client-name">
-                                <h2>Client</h2>
-                                <h3>Twitter</h3>
-                            </div>
-                            <div class="project">
-                                <h2>Project</h2>
-                                <h3>New season</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="large-4 medium-6 columns">
-                    <div class="item">
-                        <a href="case-study.html">
-                            <div class="circle-wrap">
-                                <div class="media work-13"></div>
-                            </div>
-                            <div class="client-name">
-                                <h2>Client</h2>
-                                <h3>Twitter</h3>
-                            </div>
-                            <div class="project">
-                                <h2>Project</h2>
-                                <h3>New season</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="large-4 medium-6 columns">
-                    <div class="item">
-                        <a href="case-study.html">
-                            <div class="circle-wrap">
-                                <div class="media work-14"></div>
-                            </div>
-                            <div class="client-name">
-                                <h2>Client</h2>
-                                <h3>Twitter</h3>
-                            </div>
-                            <div class="project">
-                                <h2>Project</h2>
-                                <h3>New season</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="large-4 medium-6 columns">
-                    <div class="item">
-                        <a href="case-study.html">
-                            <div class="circle-wrap">
-                                <div class="media work-15"></div>
-                            </div>
-                            <div class="client-name">
-                                <h2>Client</h2>
-                                <h3>Twitter</h3>
-                            </div>
-                            <div class="project">
-                                <h2>Project</h2>
-                                <h3>New season</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
+    <div class="content invisible">
+        <div class="full light-grey">
+          <div class="row">
+            <div class="large-6 columns">
+              <img src="images/%40stock/brainstorm.jpeg" alt="">
+              <div class="four spacing"></div>
             </div>
+            <div class="large-6 columns">
+              <h2 class="colored-title">We Brainstorm</h2>
+              <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. A officiis iste eligendi possimus delectus architecto corrupti, rerum enim nam vero, minima! Dolor repellendus velit accusantium accusamus architecto repellat neque, obcaecati? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deleniti aut ducimus optio culpa repellat perspiciatis fuga. Atque ut corporis quidem consequatur vero nobis dolorum! Nemo provident aspernatur quasi voluptate.
+              </p>
+              <div class="four spacing"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="large-6 columns">
+              <h2 class="colored-title">We are relentless</h2>
+              <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. A officiis iste eligendi possimus delectus architecto corrupti, rerum enim nam vero, minima! Dolor repellendus velit accusantium accusamus architecto repellat neque, obcaecati? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deleniti aut ducimus optio culpa repellat perspiciatis fuga. Atque ut corporis quidem consequatur vero nobis dolorum! Nemo provident aspernatur quasi voluptate.
+              </p>
+              <div class="spacing"></div>
+            </div>
+            <div class="large-6 columns">
+              <img src="images/%40stock/relentless.jpeg" alt="">
+              <div class="four spacing"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="large-6 columns">
+              <img src="images/%40stock/focussed.jpeg" alt="">
+              <div class="four spacing"></div>
+            </div>
+            <div class="large-6 columns">
+              <h2 class="colored-title">We are focussed</h2>
+              <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. A officiis iste eligendi possimus delectus architecto corrupti, rerum enim nam vero, minima! Dolor repellendus velit accusantium accusamus architecto repellat neque, obcaecati? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deleniti aut ducimus optio culpa repellat perspiciatis fuga. Atque ut corporis quidem consequatur vero nobis dolorum! Nemo provident aspernatur quasi voluptate.
+              </p>
+              <div class="spacing"></div>
+            </div> 
+          </div>
+          <div class="row">
+            <div class="large-6 columns">
+              <h2 class="colored-title">We connect</h2>
+              <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. A officiis iste eligendi possimus delectus architecto corrupti, rerum enim nam vero, minima! Dolor repellendus velit accusantium accusamus architecto repellat neque, obcaecati? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deleniti aut ducimus optio culpa repellat perspiciatis fuga. Atque ut corporis quidem consequatur vero nobis dolorum! Nemo provident aspernatur quasi voluptate.
+              </p>
+              <div class="spacing"></div>
+            </div> 
+            <div class="large-6 columns">
+              <img src="images/%40stock/connect.jpeg" alt="">
+              <div class="four spacing"></div>
+            </div>
+          </div>
+          <div class="row">
+           <div class="large-6 columns">
+              <img src="images/%40stock/collaborate.jpeg" alt="">
+              <div class="four spacing"></div>
+            </div>  
+            <div class="large-6 columns">
+              <h2 class="colored-title">We collaborate</h2>
+              <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. A officiis iste eligendi possimus delectus architecto corrupti, rerum enim nam vero, minima! Dolor repellendus velit accusantium accusamus architecto repellat neque, obcaecati? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deleniti aut ducimus optio culpa repellat perspiciatis fuga. Atque ut corporis quidem consequatur vero nobis dolorum! Nemo provident aspernatur quasi voluptate.
+              </p>
+              <div class="spacing"></div>
+            </div>
+          </div>
         </div>
+    </div>
     </div>
     <div id="contact" class="box">
         <div class="header">
