--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                     <div class="large-6 columns">
                         <h2 class="colored-title">We Brainstorm</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A officiis iste eligendi possimus delectus architecto corrupti, rerum enim nam vero, minima! Dolor repellendus velit accusantium accusamus architecto repellat neque, obcaecati? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deleniti aut ducimus optio culpa repellat perspiciatis fuga. Atque ut corporis quidem consequatur vero nobis dolorum! Nemo provident aspernatur quasi voluptate.
+                            The beauty of churning out a well-formed idea, begins with encouraging several ideas at the table. Each idea is dissected, filtered, refined and brainstormed to the level of utmost perfection.
                         </p>
                         <div class="four spacing"></div>
                     </div>
@@ -399,7 +399,7 @@
                     <div class="large-6 columns">
                         <h2 class="colored-title">We are relentless</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A officiis iste eligendi possimus delectus architecto corrupti, rerum enim nam vero, minima! Dolor repellendus velit accusantium accusamus architecto repellat neque, obcaecati? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deleniti aut ducimus optio culpa repellat perspiciatis fuga. Atque ut corporis quidem consequatur vero nobis dolorum! Nemo provident aspernatur quasi voluptate.
+                            Our strength lies in our relentlessness. We as a team do not give up in finding the best talent from across the globe - and our ‘never say die’ attitude has ensured several companies around the world celebrate the success of our relentlessness. 
                         </p>
                         <div class="spacing"></div>
                     </div>
@@ -425,7 +425,7 @@
                     <div class="large-6 columns">
                         <h2 class="colored-title">We connect</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A officiis iste eligendi possimus delectus architecto corrupti, rerum enim nam vero, minima! Dolor repellendus velit accusantium accusamus architecto repellat neque, obcaecati? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deleniti aut ducimus optio culpa repellat perspiciatis fuga. Atque ut corporis quidem consequatur vero nobis dolorum! Nemo provident aspernatur quasi voluptate.
+                            Our network is global and so is our approach. We believe in the beauty and unlimited prowess of sound networking and ensure that the benefits that we reap out of our far-reaching network are priceless.
                         </p>
                         <div class="spacing"></div>
                     </div>
@@ -442,7 +442,7 @@
                     <div class="large-6 columns">
                         <h2 class="colored-title">We collaborate</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A officiis iste eligendi possimus delectus architecto corrupti, rerum enim nam vero, minima! Dolor repellendus velit accusantium accusamus architecto repellat neque, obcaecati? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deleniti aut ducimus optio culpa repellat perspiciatis fuga. Atque ut corporis quidem consequatur vero nobis dolorum! Nemo provident aspernatur quasi voluptate.
+                            The power of synergising lies in its latent inclusivity and its apparent diversity. While we actively collaborate with several organisations and individuals, what sets us apart is our inherent drive to collaborate and bring forth the best.
                         </p>
                         <div class="spacing"></div>
                     </div>
