--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                     <div class="large-6 columns">
                         <h2 class="colored-title">We are focussed</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A officiis iste eligendi possimus delectus architecto corrupti, rerum enim nam vero, minima! Dolor repellendus velit accusantium accusamus architecto repellat neque, obcaecati? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deleniti aut ducimus optio culpa repellat perspiciatis fuga. Atque ut corporis quidem consequatur vero nobis dolorum! Nemo provident aspernatur quasi voluptate.
+                            We employ great focus and attention to detail in sieving through a pool of talent, and ensure that the prerequisites are not only matched, but are surpassed. Our unflinching focus towards finding the befitting match, is an attitude that keeps us ticking.
                         </p>
                         <div class="spacing"></div>
                     </div>
