--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             </nav>
             <div class="header-title invisible">
                 <div class="row">
-                    <div class="large-8 columns">
-                        <h2>Who</h2>
+                    <div class="large-8 columns" style="background-color: rgba(2, 119, 184, 0.3);">
+                        <h2 >Who</h2>
                         <p>We are a trusted management consulting firm with a key focus on Search and Advisory solutions.</p>
                     </div>
                 </div>
@@ -104,37 +104,37 @@
                     <div class="clients">
                         <div class='large-4 medium-4 small-4 columns'>
                             <div class="client client-bg">
-                                <img alt="" src="images/svg/value_driven.svg" />
+                                <img alt="" src="images/svg/value.svg" />
                                  <h4>Value <br>Driven</h4>
                             </div>
                         </div>
                         <div class='large-4 medium-4 small-4 columns'>
                             <div class="client">
-                                <img alt="" src="images/svg/global_reach.svg" />
+                                <img alt="" src="images/svg/global.svg" />
                                  <h4>Global<br> Reach</h4>
                             </div>
                         </div>
                         <div class='large-4 medium-4 small-4 columns'>
                             <div class="client">
-                                <img alt="" src="images/svg/post.svg" />
+                                <img alt="" src="images/svg/post_closure.svg" />
                                 <h4>Post<br> Closure<br> Engangement</h4>
                             </div>
                         </div>
                         <div class='large-4 medium-3 small-4 columns'>
                             <div class="client">
-                                <img alt="" src="images/svg/research_oriented.svg" />
+                                <img alt="" src="images/svg/research.svg" />
                                  <h4>Research<br> Oriented</h4>
                             </div>
                         </div>
                         <div class='large-4 medium-3 small-4 columns'>
                             <div class="client">
-                                <img alt="" src="images/svg/customised_approach.svg" />
+                                <img alt="" src="images/svg/sketch.svg" />
                                  <h4>Customised<br> Approach</h4>
                             </div>
                         </div>
                         <div class='large-4 medium-3 small-4 columns'>
                             <div class="client">
-                                <img alt="" src="images/svg/integrated_process.svg" />
+                                <img alt="" src="images/svg/process.svg" />
                                  <h4>Integrated<br> Process</h4>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="full">
-                <div class="large-12 columns">
+                <div class="large-12 columns" >
                     <h2>What we do.</h2>
                 </div>
                 <div class="large-12 columns">
@@ -207,12 +207,76 @@
                                 </div>
                             </div>
                             <div class='slidebox' style=''>
+                                <img src="images/%40stock/member-1.png" alt="">
+                                <p class="big-letter">
+                                    S
+                                </p>
+                                <div class="member-dec">
+                                    <h3>Stone Wayne1</h3>
+                                    <p>Founder</p>
+                                    <ul class="socials">
+                                        <li><a href="#"><i class='fa fa-twitter'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-facebook'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-linkedin'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-dribbble'></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class='slidebox' style=''>
+                                <img src="images/%40stock/member-1.png" alt="">
+                                <p class="big-letter">
+                                    S
+                                </p>
+                                <div class="member-dec">
+                                    <h3>Stone Wayne2</h3>
+                                    <p>Founder</p>
+                                    <ul class="socials">
+                                        <li><a href="#"><i class='fa fa-twitter'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-facebook'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-linkedin'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-dribbble'></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class='slidebox' style=''>
+                                <img src="images/%40stock/member-1.png" alt="">
+                                <p class="big-letter">
+                                    S
+                                </p>
+                                <div class="member-dec">
+                                    <h3>Stone Wayne3</h3>
+                                    <p>Founder</p>
+                                    <ul class="socials">
+                                        <li><a href="#"><i class='fa fa-twitter'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-facebook'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-linkedin'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-dribbble'></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class='slidebox' style=''>
+                                <img src="images/%40stock/member-1.png" alt="">
+                                <p class="big-letter">
+                                    S
+                                </p>
+                                <div class="member-dec">
+                                    <h3>Stone Wayne4</h3>
+                                    <p>Founder</p>
+                                    <ul class="socials">
+                                        <li><a href="#"><i class='fa fa-twitter'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-facebook'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-linkedin'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-dribbble'></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class='slidebox' style=''>
                                 <img src="images/%40stock/member-2.png" alt="">
                                 <p class="big-letter">
                                     Z
                                 </p>
                                 <div class="member-dec">
-                                    <h3>Zoo Jebari</h3>
+                                    <h3>Zoo Jebari5</h3>
                                     <p>Designer</p>
                                     <ul class="socials">
                                         <li><a href="#"><i class='fa fa-twitter'></i></a></li>
@@ -280,7 +344,7 @@
             </nav>
             <div class="header-title invisible">
                 <div class="row">
-                    <div class="large-8 columns">
+                    <div class="large-8 columns" style="background-color: rgba(2, 119, 184, 0.3);">
                         <h2>What</h2>
                         <p>We engage with leading organisations and support their human capital needs.</p>
                     </div>
@@ -373,7 +437,7 @@
             </nav>
             <div class="header-title invisible">
                 <div class="row">
-                    <div class="large-8 columns">
+                    <div class="large-8 columns" style="background-color: rgba(2, 119, 184, 0.3);">
                         <h2>How</h2>
                         <p>We build brands people trust. Our values and ideas bring people and brands together.</p>
                     </div>
@@ -450,7 +514,7 @@
             </div>
         </div>
     </div>
-    <div id="contact" class="box">
+    <div id="contact" class="box" >
         <div class="header">
             <nav>
                 <h2>
@@ -476,7 +540,7 @@
             </nav>
             <div class="header-title invisible">
                 <div class="row">
-                    <div class="large-8 columns">
+                    <div class="large-8 columns" style="background-color: rgba(2, 119, 184, 0.3);">
                         <h2>Contact</h2>
                         <p>We always want new and challenging ideas and projects.</p>
                     </div>
@@ -530,7 +594,7 @@
             <div class="full black">
                 <div class="large-12 columns">
                     <h2 class="white">We are ready.</h2>
-                    <div style="margin-bottom:10px;">"
+                    <div style="margin-bottom:10px;">
                         <input type="radio" onclick="candidate();" name="test" checked><span style="color:#fff;">Candidate</span>
                         <input type="radio" onclick="company();" name="test"><span style="color:#fff;">Company</span>
                     </div>
