--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div class="full light-grey">
                 <div class="row">
                     <div class="large-6 columns">
-                        <img src="images/%40stock/network.png" alt="">
+                        <img src="images/%40stock/medical.jpeg" alt="">
                         <div class="four spacing"></div>
                     </div>
                     <div class="large-6 columns">
@@ -209,13 +209,13 @@
                         <div class="spacing"></div>
                     </div>
                     <div class="large-6 columns">
-                        <img src="images/%40stock/family-tree.png" alt="">
+                        <img src="images/%40stock/multi.jpeg" alt="">
                         <div class="four spacing"></div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="large-6 columns">
-                        <img src="images/%40stock/earth-globe.png" alt="">
+                        <img src="images/%40stock/aviation.jpeg" alt="">
                         <div class="four spacing"></div>
                     </div>
                     <div class="large-6 columns">
