--- a/index.html
+++ b/index.html
@@ -486,11 +486,11 @@
 
             <div class="spacing"></div>
             <div class="full footer-bg">
-                <div class="large-6 columns">
-                    <h2 class="colored-title">Jobs.</h2>
-                    <p class="big-text">
+                <div class="large-3 columns">
+                    <h2 class="colored-title">Blogs</h2>
+                    <!--<p class="big-text">
                         We are hiring vibrant, energetic and driven individuals to share our passion and make a difference.
-                    </p>
+                    </p>-->
                     <div class="two spacing"></div>
                     <p class="contact-email">
                         <em>Write us at</em>
@@ -498,9 +498,29 @@
                     </p>
                     <div class="three spacing"></div>
                 </div>
-                <div class="large-6 columns">
-                    <h2 class="colored-title">Business.</h2>
-                    <p class="big-text"> No matter from which industry you are, we cater to your human capital and management consulting needs. You should send us an email</p>
+                <div class="large-3 columns">
+                    <h2 class="colored-title">Contact</h2>
+                    <!--<p class="big-text"> No matter from which industry you are, we cater to your human capital and management consulting needs. You should send us an email</p>-->
+                    <div class="two spacing"></div>
+                    <p class="contact-email">
+                        <em>Contact us at</em>
+                        <a href="mailto:info@peergrowth.net" title="Write to us">info@peergrowth.net</a>
+                    </p>
+                    <div class="three spacing"></div>
+                </div>
+                <div class="large-3 columns">
+                    <h2 class="colored-title">About</h2>
+                    <!--<p class="big-text"> No matter from which industry you are, we cater to your human capital and management consulting needs. You should send us an email</p>-->
+                    <div class="two spacing"></div>
+                    <p class="contact-email">
+                        <em>Contact us at</em>
+                        <a href="mailto:info@peergrowth.net" title="Write to us">info@peergrowth.net</a>
+                    </p>
+                    <div class="three spacing"></div>
+                </div>
+                <div class="large-3 columns">
+                    <h2 class="colored-title">Address</h2>
+                    <!--<p class="big-text"> No matter from which industry you are, we cater to your human capital and management consulting needs. You should send us an email</p>-->
                     <div class="two spacing"></div>
                     <p class="contact-email">
                         <em>Contact us at</em>
