footer and vision changes

--- a/index.html
+++ b/index.html
@@ -98,6 +98,26 @@
                     </p>
                 </div>
             </div>
+
+<div class="content invisible">
+            <div class="two spacing"></div>
+            <div class="full full-screen">
+                <div class="large-12 columns">
+                    <h2 class="colored-title">
+                        Vision</h2>
+                    <p class="big-text">
+                        Satisfied Clients Globally
+                    </p>
+                    <div class="spacing"></div>
+                    <p class="action-hint">
+                        <span class="scroll-down">
+                            Scroll down to know more about us.
+                            <i class="icon-arrows-slim-down"></i>
+                        </span>
+                    </p>
+                </div>
+            </div>
+
             <div class="full">
                 <div class="large-12 columns">
                     <h2 class="colored-title">Why work with us.</h2>
@@ -182,7 +202,7 @@
                 </div>
             </div>
             
-<div class="content invisible">
+<div class="full">
     <div class="large-12 columns">
                     <h2 class="colored-title">Testimonials</h2>
                 </div>
@@ -232,7 +252,7 @@
         </div>
     </div>
 
-    <div class="full">
+    <!--<div class="full">
                 <div class="large-12 columns">
                     <h2>Clients we've worked with.</h2>
                     <div class="clients">
@@ -361,7 +381,7 @@
                     </div>
                 </div>
 
-            </div>
+            </div>-->
 
 
 
@@ -493,8 +513,8 @@
                     </p>-->
                     <div class="two spacing"></div>
                     <p class="contact-email">
-                        <em>Write us at</em>
-                        <a href="mailto:info@peergrowth.net" title="Write to us">info@peergrowth.net</a>
+                        <em></em>
+                        <a href="mailto:info@peergrowth.net" title="Write to us"> </a>
                     </p>
                     <div class="three spacing"></div>
                 </div>
@@ -513,8 +533,8 @@
                     <!--<p class="big-text"> No matter from which industry you are, we cater to your human capital and management consulting needs. You should send us an email</p>-->
                     <div class="two spacing"></div>
                     <p class="contact-email">
-                        <em>Contact us at</em>
-                        <a href="mailto:info@peergrowth.net" title="Write to us">info@peergrowth.net</a>
+                        <em></em>
+                        <a href="mailto:info@peergrowth.net" title="Write to us">We are a trusted management consulting firm with key focus on search and advisory solutions.</a>
                     </p>
                     <div class="three spacing"></div>
                 </div>
@@ -523,8 +543,8 @@
                     <!--<p class="big-text"> No matter from which industry you are, we cater to your human capital and management consulting needs. You should send us an email</p>-->
                     <div class="two spacing"></div>
                     <p class="contact-email">
-                        <em>Contact us at</em>
-                        <a href="mailto:info@peergrowth.net" title="Write to us">info@peergrowth.net</a>
+                        <em></em>
+                        <a href="mailto:info@peergrowth.net" title="Write to us">Peergrowth, Po Box No.-393343, Dubai, United Arab Emirates.</a>
                     </p>
                     <div class="three spacing"></div>
                 </div>
