changed icons for why work with us

--- a/index.html
+++ b/index.html
@@ -126,37 +126,37 @@
                     <div class="clients">
                         <div class='large-4 medium-4 small-4 columns'>
                             <div class="client client-bg">
-                                <img alt="" src="images/svg/value.svg" />
+                                <img alt="" src="images/svg/whyus1.png" />
                                  <h4>Value <br>Driven</h4>
                             </div>
                         </div>
                         <div class='large-4 medium-4 small-4 columns'>
                             <div class="client">
-                                <img alt="" src="images/svg/global.svg" />
+                                <img alt="" src="images/svg/whyus2.png" />
                                  <h4>Global<br> Reach</h4>
                             </div>
                         </div>
                         <div class='large-4 medium-4 small-4 columns'>
                             <div class="client">
-                                <img alt="" src="images/svg/post_closure.svg" />
+                                <img alt="" src="images/svg/whyus3.png" />
                                 <h4>Post<br> Closure<br> Engangement</h4>
                             </div>
                         </div>
                         <div class='large-4 medium-3 small-4 columns'>
                             <div class="client">
-                                <img alt="" src="images/svg/research.svg" />
+                                <img alt="" src="images/svg/whyus4.png" />
                                  <h4>Research<br> Oriented</h4>
                             </div>
                         </div>
                         <div class='large-4 medium-3 small-4 columns'>
                             <div class="client">
-                                <img alt="" src="images/svg/sketch.svg" />
+                                <img alt="" src="images/svg/whyus5.png" />
                                  <h4>Customised<br> Approach</h4>
                             </div>
                         </div>
                         <div class='large-4 medium-3 small-4 columns'>
                             <div class="client">
-                                <img alt="" src="images/svg/process.svg" />
+                                <img alt="" src="images/svg/whyus5.png" />
                                  <h4>Integrated<br> Process</h4>
                             </div>
                         </div>
