go back button and spacing reduced footer font size resuced

--- a/board.html
+++ b/board.html
@@ -41,6 +41,12 @@
             <p>Boards are vital for any organization in today’s world. They either facilitate a company’s growth or act as a deterrent for further development.</p>
               <p>The board plays an essential role in overseeing that the company’s long term goals are on track and that the day to day functions are in accordance with the overall corporate policy. As a trusted partner, we work with leading Multinationals and Family Businesses across the globe to assist them in finding Independent and Non-Independent Directors. Our board search process is rigorous. We consistently track movements across boards through our internal research team and global network to get you the desired candidates. From our pool of qualified and seasoned Directors, you can be assured to find the candidate with the right business acumen and ethos for your board.
             </p>
+             <p class="action-hint">
+                        <a class="scroll-down" href="index.html"> 
+                        <img src="images/svg/back123.png" style=" height: 30px;">
+                            Go back home
+                        </a>                     
+                    </p>
           </div>
       </div>
     </div>
