--- a/single.html
+++ b/single.html
@@ -46,6 +46,12 @@ We have successfully partnered with corporates to work on roles that were tough,
  
 As a team, we firmly believe that “Quality is never an accident. It is always the result of intelligent effort.”
             </p>
+             <p class="action-hint">
+                        <a class="scroll-down" href="index.html"> 
+                        <img src="images/svg/back123.png" style=" height: 30px;">
+                            Go back home
+                        </a>                     
+                    </p>
           </div>
       </div>
     </div>
