--- a/training.html
+++ b/training.html
@@ -40,6 +40,12 @@
           <div class="large-8 large-centered columns">
             <p>We offer our clients bespoke training solutions with an unparalleled focus. We evaluate your training needs to design customized modules. Our process not only involves creation of content and its delivery, but also post-delivery workshops for feedback & candidate assessments.
             </p>
+             <p class="action-hint">
+                        <a class="scroll-down" href="index.html"> 
+                        <img src="images/svg/back123.png" style=" height: 30px;">
+                            Go back home
+                        </a>                     
+                    </p>
           </div>
       </div>
     </div>
