--- a/research.html
+++ b/research.html
@@ -42,6 +42,12 @@
             </p>
             <p>We offer customized solutions to our valuable clients and understand that their needs are unique. We differentiate ourselves by our ability to foresee market conditions and knowing what our client may need to augment business. We do not wait for opportunities to be created. We plan ahead and work closely with our clients to find the perfect fit. Intensive research is our strength and we love what we do. We look for creating benchmarks so that our clients value us as much as we value them.
             </p>
+             <p class="action-hint">
+                        <a class="scroll-down" href="index.html"> 
+                        <img src="images/svg/back123.png" style=" height: 30px;">
+                            Go back home
+                        </a>                     
+                    </p>
           </div>
       </div>
     </div>
