space changes and changes icons for why for what we do.

--- a/index.html
+++ b/index.html
@@ -115,41 +115,45 @@
                 </div>
             </div>
 
-            <div class="full">
-                <div class="large-12 columns">
+            <div class="full full-screen">
+                <div class="large-10 columns">
                     <h2 class="colored-title">Why work with us.</h2>
                     <div class="clients">
-                        <div class='large-4 medium-4 small-4 columns'>
-                            <div class="client client-bg">
+                        <div class='large-4  medium-4 small-4 columns'>
+                            <div class="client">
                                 <img alt="" src="images/svg/whyus1.png" />
                                  <h4>Value <br>Driven</h4>
                             </div>
                         </div>
-                        <div class='large-4 medium-4 small-4 columns'>
+
+                        <div class='large-4  medium-4 small-4 columns'>
                             <div class="client">
                                 <img alt="" src="images/svg/whyus2.png" />
                                  <h4>Global<br> Reach</h4>
                             </div>
                         </div>
-                        <div class='large-4 medium-4 small-4 columns'>
+
+                        <div class='large-4  medium-4 small-4 columns'>
                             <div class="client">
                                 <img alt="" src="images/svg/whyus3.png" />
                                 <h4>Post<br> Closure<br> Engangement</h4>
                             </div>
-                        </div>
-                        <div class='large-4 medium-3 small-4 columns'>
+                        </div>                
+                        <div class='large-4 medium-4 small-4 columns'>
                             <div class="client">
                                 <img alt="" src="images/svg/whyus4.png" />
                                  <h4>Research<br> Oriented</h4>
                             </div>
                         </div>
-                        <div class='large-4 medium-3 small-4 columns'>
+
+                        <div class='large-4 medium-4 small-4 columns'>
                             <div class="client">
                                 <img alt="" src="images/svg/whyus5.png" />
                                  <h4>Customised<br> Approach</h4>
                             </div>
                         </div>
-                        <div class='large-4 medium-3 small-4 columns'>
+
+                        <div class='large-4 medium-4 small-4 columns'>
                             <div class="client">
                                 <img alt="" src="images/svg/whyus6.png" />
                                  <h4>Integrated<br> Process</h4>
@@ -201,7 +205,7 @@
 
 
 
-<!--<div class="full">
+<div class="full">
     <div class="large-12 columns">
                     <h2 class="colored-title">Testimonials</h2>
                 </div>
