--- a/index.html
+++ b/index.html
@@ -687,6 +687,12 @@
                         <a href="#" title="Address">Peergrowth, Po Box No.-393343, Dubai, United Arab Emirates.</a>
                         <a href="#" title="Phone">+971 (0) 4 2400 448</a>
                         <a href="mailto:info@peergrowth.net" title="Email">info@peergrowth.net</a>
+                        <ul class="socials_footer">
+                                        <li><a href="#"><i class='fa fa-twitter'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-facebook'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-linkedin'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-dribbble'></i></a></li>
+                                    </ul>
                     </p>
 
 
