--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="static/css/linea-arrows-styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,400,400i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <script src="js/modernizr-custom.js"></script>
     <style>
         input[type="radio"]{
@@ -25,6 +26,9 @@
         .hidden{
             display: none;
         }
+
+
+
     </style>
     <script>
         $(document).ready(function() {
@@ -205,7 +209,7 @@
 
 
 
-<div class="full">
+<!--<div class="full">
     <div class="large-12 columns">
                     <h2 class="colored-title">Testimonials</h2>
                 </div>
@@ -542,10 +546,10 @@
                                     <h3>Stone Wayne</h3>
                                     <p>Founder</p>
                                     <ul class="socials">
-                                        <li><a href="#"><i class='fa fa-twitter'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-facebook'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-linkedin'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-dribbble'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-twitter '></i></a></li>
+                                        <li><a href="#"><i class='fa fa-facebook '></i></a></li>
+                                        <li><a href="#"><i class='fa fa-linkedin '></i></a></li>
+                                        <li><a href="#"><i class='fa fa-dribbble '></i></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -688,10 +692,9 @@
                         <a href="#" title="Phone">+971 (0) 4 2400 448</a>
                         <a href="mailto:info@peergrowth.net" title="Email">info@peergrowth.net</a>
                         <ul class="socials_footer">
-                                        <li><a href="#"><i class='fa fa-twitter'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-facebook'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-linkedin'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-dribbble'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-instagram fa-2x'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-facebook fa-2x'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-linkedin fa-2x'></i></a></li>
                                     </ul>
                     </p>
 
