footer color change

--- a/index.html
+++ b/index.html
@@ -692,9 +692,9 @@
                         <a href="#" title="Phone">+971 (0) 4 2400 448</a>
                         <a href="mailto:info@peergrowth.net" title="Email">info@peergrowth.net</a>
                         <ul class="socials_footer">
-                                        <li><a href="#"><i class='fa fa-instagram fa-2x'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-facebook fa-2x'></i></a></li>
-                                        <li><a href="#"><i class='fa fa-linkedin fa-2x'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-instagram fa-2x leg'></i></a></li>
+                                        <li><a href="#"><i class='fa fa-facebook fa-2x footer' ></i></a></li>
+                                        <li><a href="#"><i class='fa fa-linkedin fa-2x footer'></i></a></li>
                                     </ul>
                     </p>
 
