--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 </div>
                 </div>
 <div class="full_test">
-<div class="carousel" data-flickity='{ "fade": true, "imagesLoaded": true }'>
+<div class="carousel" data-flickity='{ "fade": true, "imagesLoaded": true,  "prevNextButtons": false}'>
     <div class="carousel-cell"><br> <h2><a href="single.html" >A multi billion dollar health care group</a></h2>
                 <p>Peergrowth has helped us onboard some very key team members for the corporate team. As a service Peergrowth evaluates the organisations needs very objectively to ensure we get the best return for our efforts. They always ensure a very clear understanding of the buisness and competencies required for the roles. Despite some challenging roles and timelines at hand, the sourcing and interview process has always been seamless. Their partners are extremely sharp and have a long-term vison when recruting candidates.</p></div>
     <div class="carousel-cell"><br><h2><a href="single.html">A massive family conglomerate</a></h2>
