--- a/index.html
+++ b/index.html
@@ -277,21 +277,23 @@
     </div>
 </div>
 
-<div class="full_test">
+<div class="spacing"></div>
+<div class="full">
 <div class="large-12 columns">
                     <h2 class="colored-title">Testimonials</h2>
                 </div>
                 </div>
 <div class="full_test">
-<div class="carousel" data-flickity='{ "fade": true, "imagesLoaded": true,  "prevNextButtons": false}'>
-    <div class="carousel-cell"><br> <h2><a href="single.html" >A multi billion dollar health care group</a></h2>
+<div class="carousel" data-flickity='{ "fade": true, "prevNextButtons": false}'>
+    <div class="carousel-cell"><br> <h2><a href="#" >A multi billion dollar health care group</a></h2>
                 <p>Peergrowth has helped us onboard some very key team members for the corporate team. As a service Peergrowth evaluates the organisations needs very objectively to ensure we get the best return for our efforts. They always ensure a very clear understanding of the buisness and competencies required for the roles. Despite some challenging roles and timelines at hand, the sourcing and interview process has always been seamless. Their partners are extremely sharp and have a long-term vison when recruting candidates.</p></div>
-    <div class="carousel-cell"><br><h2><a href="single.html">A massive family conglomerate</a></h2>
+    <div class="carousel-cell"><br><h2><a href="#">A massive family conglomerate</a></h2>
                 <p>I find Abishek to be very engaging, dependable and high in integrity, he works with a wide network of well-qualified individuals across a range of job diciplines. What I value the most is that he always listens but never afraid to push back when he feels that someone is the right fir for our buisness. Having a partnership with Abishek and Peergrowth has significantly imoroved our time-to-hire on key roles over the past six months. He is very effictive at his job and its a pleasure to recommend him as a accomplished recruiting proffessional.</p></div>
-    <div class="carousel-cell"><br><h2><a href="single.html">A reputed Avation group</a></h2>
+    <div class="carousel-cell"><br><h2><a href="#s">A reputed Avation group</a></h2>
                 <p>Peergrowth has provided us with a tailored recruitment service through comprehensive unerstanding of our culture and service needs. This personalised approach goes a long wat in meeting our needs and successfully identified people for our organisation.</p></div>
 </div>
 </div>
+
 
     <!--<div class="full">
         <div class="large-12 columns">
@@ -557,7 +559,7 @@
 
 
 
-
+<div class="three spacing"></div>
             <div id="team" class="full no-bottom">
                 <div class="large-12 columns">
                     <h2 class="colored-title">Meet the team.</h2>
